# easydb

./: .editorconfig  .gitignore  CONTRIBUTING.md  README.en.md  README.md  README.zh-CN.md  dev.sh  package.json  release.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml
apps/desktop-ui/: index.html  package.json  test-white-screen.cjs  vite.config.ts  vitest.config.ts
apps/desktop-ui/src/: App.css  App.tsx  index.css
apps/desktop-ui/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop-ui/src-tauri/icons/: icon.icns
apps/desktop-ui/src-tauri/src/: lib.rs
apps/desktop-ui/src/components/: BackupDatabaseModal.tsx  CallProcedurePanel.tsx  CommandPalette.tsx  ConfirmModal.tsx  CreateDatabaseModal.tsx  EditDatabaseModal.tsx  (+14 more)
design-system/easydb/: MASTER.md  demo.html
docs/: desktop-app-packaging.md  mysql-sync-performance-prd.md  mysql-sync-performance-td.md
docs/功能统计/04-数据迁移/: 自动化测试报告.md
docs/功能统计/05-数据同步/: 自动化测试报告.md
docs/功能统计/06-结构对比/: 自动化测试报告.md
kernel/: build.gradle.kts  gradle.properties  settings.gradle.kts
kernel/api/: build.gradle.kts
kernel/backup-engine/: build.gradle.kts
kernel/common/: build.gradle.kts
kernel/compare-engine/: build.gradle.kts
kernel/dialect/: build.gradle.kts
kernel/drivers/mysql/: build.gradle.kts
kernel/launcher/: build.gradle.kts
kernel/metadata/: build.gradle.kts
kernel/migration-engine/: build.gradle.kts
kernel/sync-engine/: build.gradle.kts
kernel/task-center/: build.gradle.kts
kernel/tunnel/: build.gradle.kts
(+96 files in other folders)
